mikec/tests/PASS/semantic/90.mc
void main(){
	
}

void func1(int a){
	int a = 0;
	
}
