mikec/tests/fail/Semantic/09.mc
/* Assign float value to int */
void main()
{
	int a = 5.5;
}